# chess2

./: .gitignore  CMakeLists.txt  README.md  army.cpp  army.hpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  game.cpp  game.hpp  license.txt  move.cpp  move.hpp  netgame.cpp  netgame.hpp  piece.cpp  piece.hpp  player.cpp  player.hpp  position.cpp  position.hpp  sdlclient.cpp  sidebar.cpp  sidebar.hpp  sidebarobject.cpp  sidebarobject.hpp
